add figura 3d plantilla

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -175,7 +175,6 @@
   }
 
   .grilla {
-    display: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -1361,7 +1360,7 @@
         .parrafo_uno {
           width: 20vw;
           color: #fff;
-          font-family: Gotham;
+          font-family: poppins;
           font-size: 15px;
           font-style: normal;
           font-weight: 300;
@@ -1372,7 +1371,7 @@
 
         .parrafo_dos {
           color: #fff;
-          font-family: Gotham;
+          font-family: poppins;
           font-size: 15px;
           font-style: normal;
           font-weight: 300;
@@ -1463,7 +1462,7 @@
         .parrafo_uno {
           width: 20vw;
           color: #000000;
-          font-family: Gotham;
+          font-family: poppins;
           font-size: 15px;
           font-style: normal;
           font-weight: 300;
@@ -1474,7 +1473,7 @@
 
         .parrafo_dos {
           color: #000000;
-          font-family: Gotham;
+          font-family: poppins;
           font-size: 15px;
           font-style: normal;
           font-weight: 300;
@@ -2952,7 +2951,7 @@
           .parrafo_uno {
             width: 100%;
             color: #fff;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 2vh);
             font-style: normal;
             font-weight: 300;
@@ -2963,7 +2962,7 @@
 
           .parrafo_dos {
             color: #fff;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 1vh);
             font-style: normal;
             font-weight: 500;
@@ -3057,7 +3056,7 @@
           .parrafo_uno {
             width: 100%;
             color: #000000;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 2vh);
             font-style: normal;
             font-weight: 300;
@@ -3068,7 +3067,7 @@
 
           .parrafo_dos {
             color: #000000;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 1vh);
             font-style: normal;
             font-weight: 500;
@@ -4546,7 +4545,7 @@
           .parrafo_uno {
             width: 100%;
             color: #fff;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 2vh);
             font-style: normal;
             font-weight: 300;
@@ -4557,7 +4556,7 @@
 
           .parrafo_dos {
             color: #fff;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 1vh);
             font-style: normal;
             font-weight: 500;
@@ -4651,7 +4650,7 @@
           .parrafo_uno {
             width: 100%;
             color: #000000;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 2vh);
             font-style: normal;
             font-weight: 300;
@@ -4662,7 +4661,7 @@
 
           .parrafo_dos {
             color: #000000;
-            font-family: Gotham;
+            font-family: poppins;
             font-size: calc(1px + 1vh);
             font-style: normal;
             font-weight: 500;
