--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -28,7 +28,7 @@ $line-height: $clip-height - 5px;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  //   border: 1px solid red;
+  //border: 1px solid red;
 }
 
 a {
@@ -730,9 +730,10 @@ p {
       display: flex;
       justify-content: space-between;
       justify-items: center;
+      align-items: center;
 
       .cont__logo__nav {
-        transform: scale(0.9);
+        transform: scale(0.8);
         z-index: 1000;
         filter: invert(100%);
         align-items: center;
@@ -741,7 +742,12 @@ p {
       .icono-menu {
         transform: scale(0.8);
         z-index: 1000;
-        margin-right: 5px;
+        margin-right: -5px;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: start;
 
         .bars__menu {
           width: 10px;
