--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -10,6 +10,7 @@
 
 
         .colum_uno {
+            position:relative;
             width: 50%;
             display: flex;
             flex-direction: column;
@@ -40,6 +41,32 @@
             }
 
             .contadores {}
+
+
+            .stikerlvl {
+                rotate: 20deg;
+                position:absolute;
+                top: 10px;
+                right: 20px;
+
+                img {}
+
+                p { 
+                    text-align: center;
+                    position:absolute;
+                    top: 40px;
+                    left: 21px;
+                    color: #ffffff;
+                    font-family: Margo + Beuys;
+                    font-size: 15px;
+                    font-style: normal;
+                    font-weight: 900;
+                    line-height: 136%;
+                    /* 20.4px */
+                    text-transform: capitalize;
+
+                }
+            }
         }
 
         .columdos {
@@ -99,7 +126,7 @@
         }
     }
 
-    .cont_grilla_proyectos{
+    .cont_grilla_proyectos {
         margin: 2em 5em 10em 5em;
         display: flex;
         flex-direction: row;
@@ -109,13 +136,15 @@
             width: min-content;
             display: flex;
             flex-direction: column;
+
             img {}
-    
+
             .cont_pie_proyecto {
                 display: flex;
                 flex-direction: row;
                 justify-content: space-between;
                 margin-top: 10px;
+
                 p {
                     color: #000;
                     font-family: Margo + Beuys;
@@ -126,16 +155,15 @@
                     /* 20.4px */
                     text-transform: capitalize;
                 }
-    
+
                 .cont_fecha {
                     display: flex;
                     flex-direction: row;
                     align-items: center;
                     gap: 5px;
-                    img {
-    
-                    }
-    
+
+                    img {}
+
                     p {
                         color: #000;
                         font-family: Margo + Beuys;
@@ -155,23 +183,23 @@
 }
 
 
-@media (max-width: 720px){
+@media (max-width: 720px) {
     .body_plantilla {
         width: 100%;
-    
+
         .cont_inicio {
             display: flex;
             height: 100vh;
             flex-direction: column-reverse;
             margin: 2em 5vw 2em 5vw;
             gap: 2em;
-    
+
             .colum_uno {
                 width: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-    
+
                 .titulo {
                     color: #000;
                     font-family: Margo + Beuys;
@@ -182,7 +210,7 @@
                     /* 102px */
                     text-transform: uppercase;
                 }
-    
+
                 .parrafo {
                     color: #000;
                     font-family: poppins;
@@ -195,23 +223,23 @@
                     padding-bottom: 2em;
                     border-bottom: 1px solid #414141;
                 }
-    
+
                 .contadores {}
             }
-    
+
             .colum_dos {
                 background: #D9D9D9;
                 width: 100%;
                 height: 50%;
             }
         }
-    
+
         .cont_cinta_plantilla {
             position: relative;
             width: 100%;
             height: 50px;
             overflow-x: hidden;
-    
+
             .slider_inicio {
                 width: 100%;
                 position: absolute;
@@ -221,7 +249,7 @@
                 flex-shrink: 0;
                 overflow: hidden;
                 background: #ffffff;
-    
+
                 .slide-track {
                     width: 100%;
                     -webkit-animation: 10s linear infinite;
@@ -231,14 +259,14 @@
                     width: 2400px;
                     align-items: start;
                     gap: 1px;
-    
+
                     .slide {
                         height: 50px;
                         width: 200px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
-    
+
                         p {
                             padding-top: 10px;
                             padding-bottom: 10px;
@@ -255,24 +283,26 @@
                 }
             }
         }
-    
-        .cont_grilla_proyectos{
+
+        .cont_grilla_proyectos {
             margin: 2em 5em 10em 5em;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-    
+
             .cont_proyectos {
                 width: min-content;
                 display: flex;
                 flex-direction: column;
+
                 img {}
-        
+
                 .cont_pie_proyecto {
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
                     margin-top: 10px;
+
                     p {
                         color: #000;
                         font-family: Margo + Beuys;
@@ -283,16 +313,15 @@
                         /* 20.4px */
                         text-transform: capitalize;
                     }
-        
+
                     .cont_fecha {
                         display: flex;
                         flex-direction: row;
                         align-items: center;
                         gap: 5px;
-                        img {
-        
-                        }
-        
+
+                        img {}
+
                         p {
                             color: #000;
                             font-family: Margo + Beuys;
@@ -308,7 +337,7 @@
                 }
             }
         }
-    
+
     }
 
 }
