--- a/style/sass.css
+++ b/style/sass.css
@@ -3952,6 +3952,7 @@ body {
   gap: 2em;
 }
 .body_plantilla .cont_inicio .colum_uno {
+  position: relative;
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -3978,6 +3979,26 @@ body {
   text-transform: capitalize;
   padding-bottom: 2em;
   border-bottom: 1px solid #414141;
+}
+.body_plantilla .cont_inicio .colum_uno .stikerlvl {
+  rotate: 20deg;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+.body_plantilla .cont_inicio .colum_uno .stikerlvl p {
+  text-align: center;
+  position: absolute;
+  top: 40px;
+  left: 21px;
+  color: #ffffff;
+  font-family: MargoBeuys;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 136%;
+  /* 20.4px */
+  text-transform: capitalize;
 }
 .body_plantilla .cont_inicio .columdos {
   width: 50%;
