--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -192,7 +192,9 @@
             height: 100vh;
             flex-direction: column-reverse;
             margin: 2em 5vw 2em 5vw;
-            gap: 2em;
+            gap: 0em;
+            align-items: center;
+            justify-content: start;
 
             .colum_uno {
                 width: 100%;
@@ -227,9 +229,8 @@
                 .contadores {}
             }
 
-            .colum_dos {
-                background: #D9D9D9;
-                width: 100%;
+            .columdos {
+                width: 60%;
                 height: 50%;
             }
         }
