--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -303,7 +303,7 @@ p {
             transform: scale(1);
             padding: 0.5em 2em;
             border-radius: 200px;
-            background: #b2d9ff;
+            background: #fbff00;
             margin-right: 20px;
           }
 
@@ -466,7 +466,7 @@ p {
             transform: scale(1);
             padding: 0.5em 2em;
             border-radius: 200px;
-            background: #b2d9ff;
+            background: #fbff00;
             margin-right: 20px;
           }
 
@@ -705,6 +705,39 @@ p {
         transform: scale(1.1);
       }
 
+      .backfloat__wapp {
+        position: absolute;
+        z-index: 0;
+        animation-name: backfloat;
+        animation-duration: 10s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+      }
+    }
+  }
+  .float__wapp_dos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 20px;
+    right: 110px;
+    z-index: 1;
+    a {
+      width: 200%;
+      height: 100px;
+  
+      .botonfloat__wapp {
+        margin-top: 23px;
+        margin-left: 25px;
+        position: absolute;
+        z-index: 1;
+      }
+  
+      .botonfloat__wapp:hover {
+        transform: scale(1.1);
+      }
+  
       .backfloat__wapp {
         position: absolute;
         z-index: 0;
@@ -1229,6 +1262,7 @@ p {
     }
 
     .list_social {
+      z-index: 500;
       width: 100%;
       display: flex;
       flex-direction: column;
