--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -67,7 +67,7 @@
       display: flex;
       width: 100%;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-evenly;
       flex-direction: column;
       height: 90vh;
 
@@ -75,7 +75,7 @@
         color: #000;
         text-align: center;
         font-family: MargoBeuys;
-        font-size: calc(1px + 5vw);
+        font-size: calc(1px + 4.5vw);
         font-style: normal;
         font-weight: 600;
         line-height: 136%;
@@ -84,7 +84,7 @@
         strong {
           color: #000000;
           font-family: "Bodoni Moda", serif;
-          font-size: calc(1px + 5vw);
+          font-size: calc(1px + 4.5vw);
           font-style: italic;
           font-weight: 700;
           line-height: 136%;
@@ -189,12 +189,12 @@
     z-index: -10;
     top: 0px;
     left: 0px;
-    background: #f4f4f4;
     width: 100vw;
     height: 120vh;
     overflow: hidden;
 
     .bold_uno {
+      display: none;
       position: absolute;
       top: -400px;
       left: -300px;
@@ -202,6 +202,7 @@
     }
 
     .bold_dos {
+      display: none;
       position: absolute;
       top: 10px;
       left: -200px;
@@ -209,6 +210,7 @@
     }
 
     .bold_tres {
+      display: none;
       position: absolute;
       bottom: -600px;
       right: -400px;
@@ -216,21 +218,28 @@
     }
 
     .fondo_blur {
-      z-index: 0;
+      z-index: 1;
       width: 100vw;
       height: 100%;
       background: repeating-radial-gradient(
-            rgba(255, 255, 255, 0.02) 0 0.0001%,
+            rgba(255, 238, 0, 0.2) 0 0.0001%,
             #ffffff46 0 0.0002%
           )
           60% 60%/3000px 3000px,
         repeating-conic-gradient(
-            rgba(255, 255, 255, 0.02) 0 0.0001%,
+            rgba(255, 251, 0, 0.2) 0 0.0001%,
             #ffffff46 0 0.0002%
           )
           40% 40%/3000px 3000px;
       background-blend-mode: difference;
       backdrop-filter: blur(30px);
+    }
+    #canvasindex{
+      background: #080808;
+      position: absolute;
+      z-index: -1;
+      width: 100%;
+      height: 100%;
     }
   }
 
