actualizacion de blur en inicio

--- a/style/sass.css
+++ b/style/sass.css
@@ -4373,7 +4373,7 @@ body {
   gap: 10px;
   align-self: stretch;
   border-radius: 10px;
-  background: #fff503;
+  background: #ffffff;
   color: #000;
   font-family: MargoBeuys;
   font-size: 15px;
@@ -4460,16 +4460,22 @@ body {
   animation: 5s infinite linear gradienanimate;
 }
 .body__index .fondo_inicio .fondo_blur {
-  z-index: 1;
+  z-index: 5;
   width: 100vw;
   height: 100%;
-  background: repeating-radial-gradient(rgba(255, 238, 0, 0.2) 0 0.0001%, rgba(255, 255, 255, 0.2745098039) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 251, 0, 0.2) 0 0.0001%, rgba(255, 255, 255, 0.2745098039) 0 0.0002%) 40% 40%/3000px 3000px;
+  background: repeating-radial-gradient(rgba(255, 255, 255, 0.1) 0 0.0001%, rgba(231, 231, 231, 0.2745098039) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0.1) 0 0.0001%, rgba(231, 231, 231, 0.2745098039) 0 0.0002%) 40% 40%/3000px 3000px;
   background-blend-mode: difference;
-  -webkit-backdrop-filter: blur(30px);
-          backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(0px);
+          backdrop-filter: blur(0px);
+}
+.body__index .fondo_inicio .fondo_blur_movil {
+  display: none;
+  z-index: 5;
+  width: 100vw;
+  height: 100%;
 }
 .body__index .fondo_inicio #canvasindex {
-  background: #080808;
+  background: #ffffff;
   position: absolute;
   z-index: -1;
   width: 100%;
@@ -5760,31 +5766,25 @@ body {
     overflow: hidden;
   }
   .body__index .fondo_inicio .bold_uno {
+    display: none;
     position: absolute;
     top: -400px;
     left: -300px;
     animation: 5s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_dos {
+    display: none;
     position: absolute;
     top: 10px;
     left: -200px;
     animation: 5s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_tres {
+    display: none;
     position: absolute;
     bottom: -600px;
     right: -400px;
     animation: 5s infinite linear gradienanimate;
-  }
-  .body__index .fondo_inicio .fondo_blur {
-    z-index: 0;
-    width: 100vw;
-    height: 100%;
-    background: repeating-radial-gradient(rgba(255, 255, 255, 0) 0 0.0001%, rgba(255, 255, 255, 0) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0) 0 0.0001%, rgba(255, 255, 255, 0) 0 0.0002%) 40% 40%/3000px 3000px;
-    background-blend-mode: difference;
-    -webkit-backdrop-filter: blur(30px);
-            backdrop-filter: blur(30px);
   }
   .body__index .cont_cinta_inicio {
     margin-top: 7em;
@@ -7154,24 +7154,28 @@ body {
     overflow: hidden;
   }
   .body__index .fondo_inicio .bold_uno {
+    display: none;
     position: absolute;
     top: -300px;
     left: -500px;
     animation: 20s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_dos {
+    display: none;
     position: absolute;
     top: 100px;
     left: -200px;
     animation: 20s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_tres {
+    display: none;
     position: absolute;
     bottom: -900px;
     right: -400px;
     animation: 20s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .fondo_blur {
+    display: none;
     z-index: 0;
     width: 100vw;
     height: 100%;
@@ -7179,6 +7183,12 @@ body {
     background-blend-mode: difference;
     -webkit-backdrop-filter: blur(30px);
             backdrop-filter: blur(30px);
+  }
+  .body__index .fondo_inicio .fondo_blur_movil {
+    display: none;
+    z-index: 5;
+    width: 100vw;
+    height: 100%;
   }
   .body__index .cont_cinta_inicio {
     margin-top: 3em;
