--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -117,7 +117,7 @@
           gap: 10px;
           align-self: stretch;
           border-radius: 10px;
-          background: #fff503;
+          background: #ffffff;
           color: #000;
           font-family: MargoBeuys;
           font-size: 15px;
@@ -145,8 +145,7 @@
           align-items: center;
           gap: 10px;
 
-          img {
-          }
+          img {}
 
           h4 {
             color: #252525;
@@ -218,24 +217,28 @@
     }
 
     .fondo_blur {
-      z-index: 1;
+      z-index: 5;
       width: 100vw;
       height: 100%;
       background: repeating-radial-gradient(
-            rgba(255, 238, 0, 0.2) 0 0.0001%,
-            #ffffff46 0 0.0002%
-          )
-          60% 60%/3000px 3000px,
+          rgba(255, 255, 255, 0.1) 0 0.0001%,
+          #e7e7e746 0 0.0002%) 60% 60%/3000px 3000px,
         repeating-conic-gradient(
-            rgba(255, 251, 0, 0.2) 0 0.0001%,
-            #ffffff46 0 0.0002%
-          )
-          40% 40%/3000px 3000px;
+          rgba(255, 255, 255, 0.1) 0 0.0001%,
+          #e7e7e746 0 0.0002%) 40% 40%/3000px 3000px;
       background-blend-mode: difference;
-      backdrop-filter: blur(30px);
+      backdrop-filter: blur(0px);
     }
-    #canvasindex{
-      background: #080808;
+
+    .fondo_blur_movil {
+      display: none;
+      z-index: 5;
+      width: 100vw;
+      height: 100%;
+    }
+
+    #canvasindex {
+      background: #ffffff;
       position: absolute;
       z-index: -1;
       width: 100%;
@@ -846,16 +849,10 @@
       .fondo_blur {
         width: 100vw;
         height: 100%;
-        background: repeating-radial-gradient(
-              rgba(255, 255, 255, 0.02) 0 0.0001%,
-              rgba(238, 255, 0, 0.247) 0 0.0005%
-            )
-            60% 60%/3000px 3000px,
-          repeating-conic-gradient(
-              rgba(255, 255, 255, 0.02) 0 0.0001%,
-              rgba(255, 189, 7, 0.247) 0 0.0005%
-            )
-            40% 40%/3000px 3000px;
+        background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
+            rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
+          repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
+            rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
         background-blend-mode: difference;
         animation: b 0.5s infinite alternate;
         backdrop-filter: blur(30px);
@@ -1710,6 +1707,7 @@
       overflow: hidden;
 
       .bold_uno {
+        display: none;
         position: absolute;
         top: -400px;
         left: -300px;
@@ -1717,6 +1715,7 @@
       }
 
       .bold_dos {
+        display: none;
         position: absolute;
         top: 10px;
         left: -200px;
@@ -1724,29 +1723,14 @@
       }
 
       .bold_tres {
+        display: none;
         position: absolute;
         bottom: -600px;
         right: -400px;
         animation: 5s infinite linear gradienanimate;
       }
 
-      .fondo_blur {
-        z-index: 0;
-        width: 100vw;
-        height: 100%;
-        background: repeating-radial-gradient(
-              rgba(255, 255, 255, 0) 0 0.0001%,
-              #ffffff00 0 0.0002%
-            )
-            60% 60%/3000px 3000px,
-          repeating-conic-gradient(
-              rgba(255, 255, 255, 0) 0 0.0001%,
-              #ffffff00 0 0.0002%
-            )
-            40% 40%/3000px 3000px;
-        background-blend-mode: difference;
-        backdrop-filter: blur(30px);
-      }
+      
     }
 
     .cont_cinta_inicio {
@@ -2317,6 +2301,7 @@
             margin-left: 2px;
             width: calc(1px + 20vw);
           }
+
           .parrafo_lista_plus {
             color: #000;
             text-align: justify;
@@ -2362,16 +2347,10 @@
         .fondo_blur {
           width: 100vw;
           height: 100%;
-          background: repeating-radial-gradient(
-                rgba(255, 255, 255, 0.02) 0 0.0001%,
-                rgba(238, 255, 0, 0.247) 0 0.0005%
-              )
-              60% 60%/3000px 3000px,
-            repeating-conic-gradient(
-                rgba(255, 255, 255, 0.02) 0 0.0001%,
-                rgba(255, 189, 7, 0.247) 0 0.0005%
-              )
-              40% 40%/3000px 3000px;
+          background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
+              rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
+            repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
+              rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
           background-blend-mode: difference;
           animation: b 0.5s infinite alternate;
           backdrop-filter: blur(30px);
@@ -3285,7 +3264,8 @@
       }
     }
 
-    .grilla {      position: absolute;
+    .grilla {
+      position: absolute;
       top: 0;
       left: 0;
       z-index: -1;
@@ -3305,6 +3285,7 @@
       overflow: hidden;
 
       .bold_uno {
+        display: none;
         position: absolute;
         top: -300px;
         left: -500px;
@@ -3312,6 +3293,7 @@
       }
 
       .bold_dos {
+        display: none;
         position: absolute;
         top: 100px;
         left: -200px;
@@ -3319,6 +3301,7 @@
       }
 
       .bold_tres {
+        display: none;
         position: absolute;
         bottom: -900px;
         right: -400px;
@@ -3326,21 +3309,22 @@
       }
 
       .fondo_blur {
+        display: none;
         z-index: 0;
         width: 100vw;
         height: 100%;
-        background: repeating-radial-gradient(
-              rgba(255, 255, 255, 0) 0 0.0001%,
-              #ffffff00 0 0.0002%
-            )
-            60% 60%/3000px 3000px,
-          repeating-conic-gradient(
-              rgba(255, 255, 255, 0) 0 0.0001%,
-              #ffffff00 0 0.0002%
-            )
-            40% 40%/3000px 3000px;
+        background: repeating-radial-gradient(rgba(255, 255, 255, 0) 0 0.0001%,
+            #ffffff00 0 0.0002%) 60% 60%/3000px 3000px,
+          repeating-conic-gradient(rgba(255, 255, 255, 0) 0 0.0001%,
+            #ffffff00 0 0.0002%) 40% 40%/3000px 3000px;
         background-blend-mode: difference;
         backdrop-filter: blur(30px);
+      }
+      .fondo_blur_movil {
+        display: none;
+        z-index: 5;
+        width: 100vw;
+        height: 100%;
       }
     }
 
@@ -3910,6 +3894,7 @@
             margin-left: 2px;
             width: calc(1px + 20vw);
           }
+
           .parrafo_lista_plus {
             color: #000;
             text-align: justify;
@@ -3955,16 +3940,10 @@
         .fondo_blur {
           width: 100vw;
           height: 100%;
-          background: repeating-radial-gradient(
-                rgba(255, 255, 255, 0.02) 0 0.0001%,
-                rgba(238, 255, 0, 0.247) 0 0.0005%
-              )
-              60% 60%/3000px 3000px,
-            repeating-conic-gradient(
-                rgba(255, 255, 255, 0.02) 0 0.0001%,
-                rgba(255, 189, 7, 0.247) 0 0.0005%
-              )
-              40% 40%/3000px 3000px;
+          background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
+              rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
+            repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
+              rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
           background-blend-mode: difference;
           animation: b 0.5s infinite alternate;
           backdrop-filter: blur(30px);
