--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1729,6 +1729,12 @@
         right: -400px;
         animation: 5s infinite linear gradienanimate;
       }
+      .fondo_blur_movil {
+        display: none;
+        z-index: 5;
+        width: 100vw;
+        height: 100%;
+      }
 
       
     }
@@ -3285,7 +3291,8 @@
       overflow: hidden;
 
       .bold_uno {
-        display: none;
+        display: flex;
+        z-index: -1;
         position: absolute;
         top: -300px;
         left: -500px;
@@ -3293,7 +3300,8 @@
       }
 
       .bold_dos {
-        display: none;
+        display: flex;
+        z-index: -1;
         position: absolute;
         top: 100px;
         left: -200px;
@@ -3301,9 +3309,10 @@
       }
 
       .bold_tres {
-        display: none;
+        display: flex;
+        z-index: -1;
         position: absolute;
-        bottom: -900px;
+        bottom: -500px;
         right: -400px;
         animation: 20s infinite linear gradienanimate;
       }
@@ -3321,11 +3330,16 @@
         backdrop-filter: blur(30px);
       }
       .fondo_blur_movil {
-        display: none;
-        z-index: 5;
+        display:flex;
+        z-index: 0;
         width: 100vw;
         height: 100%;
+        background-blend-mode: difference;
+        backdrop-filter: blur(30px);
       }
+      #canvasindex{
+        z-index: -500;
+      display: none;}
     }
 
     .cont_cinta_inicio {
