--- a/style/sass.css
+++ b/style/sass.css
@@ -5786,6 +5786,12 @@ body {
     right: -400px;
     animation: 5s infinite linear gradienanimate;
   }
+  .body__index .fondo_inicio .fondo_blur_movil {
+    display: none;
+    z-index: 5;
+    width: 100vw;
+    height: 100%;
+  }
   .body__index .cont_cinta_inicio {
     margin-top: 7em;
     position: relative;
@@ -7154,23 +7160,26 @@ body {
     overflow: hidden;
   }
   .body__index .fondo_inicio .bold_uno {
-    display: none;
+    display: flex;
+    z-index: -1;
     position: absolute;
     top: -300px;
     left: -500px;
     animation: 20s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_dos {
-    display: none;
+    display: flex;
+    z-index: -1;
     position: absolute;
     top: 100px;
     left: -200px;
     animation: 20s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_tres {
-    display: none;
+    display: flex;
+    z-index: -1;
     position: absolute;
-    bottom: -900px;
+    bottom: -500px;
     right: -400px;
     animation: 20s infinite linear gradienanimate;
   }
@@ -7185,10 +7194,17 @@ body {
             backdrop-filter: blur(30px);
   }
   .body__index .fondo_inicio .fondo_blur_movil {
-    display: none;
-    z-index: 5;
+    display: flex;
+    z-index: 0;
     width: 100vw;
     height: 100%;
+    background-blend-mode: difference;
+    -webkit-backdrop-filter: blur(30px);
+            backdrop-filter: blur(30px);
+  }
+  .body__index .fondo_inicio #canvasindex {
+    z-index: -500;
+    display: none;
   }
   .body__index .cont_cinta_inicio {
     margin-top: 3em;
